--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Practicals">
+
         <activity
+            android:name=".ui_widget.TaskButtons"
+            android:exported="true" >
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -18,6 +21,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <activity
+            android:name=".ui_widget.Toast"
+            android:exported="true" />
+
+        <activity
+            android:name=".ui_widget.RegistrationForm"
+            android:exported="true"
+            android:theme="@style/Theme.Practicals.NoActionBar"/>
+
+        <activity
+            android:name=".ui_widget.MainActivity"
+            android:exported="true" />
+
+    </application>
 </manifest>
