--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,48 +8,15 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Practicals">
+        android:theme="@style/Theme.Practicals" >
 
-        <activity
-            android:name=".ui_widget.Toast"
-            android:exported="true" />
-
-        <activity
-            android:name=".ui_widget.RegistrationForm"
-            android:exported="true"
-            android:theme="@style/Theme.Practicals.NoActionBar" />
-
-        <activity
-            android:name=".recycler_list_practicals.Activities.BottomNavigation"
-            android:exported="false" />
-        <activity
-            android:name=".recycler_list_practicals.Activities.ViewPagerActivity"
-            android:exported="false" />
-        <activity
-            android:name=".recycler_list_practicals.Activities.ListRecyclerViewPager"
-            android:exported="true"/>
-        <activity
-            android:name=".activity_intent_fragment_practicals.Activities.AndroidDTasks"
-            android:exported="false" />
-        <activity
-            android:name=".activity_intent_fragment_practicals.Activities.FragmentContainerActivity"
-            android:exported="true">
-
-        </activity>
-        <activity
-            android:name=".activity_intent_fragment_practicals.Activities.JetpackNavActivity"
-            android:exported="true">
-
-        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true" >
@@ -59,43 +26,30 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".views.ViewTasksActivity"/>
+        <activity android:name=".views.ScrollView"/>
+        <activity android:name=".views.WebView"/>
+        <activity android:name=".views.NestedScrollView"/>
+        <activity android:name=".ui_widget.Toast"/>
+        <activity android:name=".recycler_list_practicals.Activities.BottomNavigation"/>
+        <activity android:name=".recycler_list_practicals.Activities.ViewPagerActivity"/>
+        <activity android:name=".recycler_list_practicals.Activities.ListRecyclerViewPager"/>
+        <activity android:name=".activity_intent_fragment_practicals.Activities.AndroidDTasks"/>
+        <activity android:name=".activity_intent_fragment_practicals.Activities.FragmentContainerActivity"/>
+        <activity android:name=".activity_intent_fragment_practicals.Activities.JetpackNavActivity"/>
+        <activity android:name=".layout_practicals.FrameLayout" />
+        <activity android:name=".layout_practicals.TableLayout"/>
+        <activity android:name=".layout_practicals.ConstraintLayout"/>
+        <activity android:name=".layout_practicals.RelativeLayout"/>
+        <activity android:name=".layout_practicals.LinearLayout"/>
+        <activity android:name=".layout_practicals.Layouts"/>
+        <activity android:name=".recycler_list_practicals.Activities.RecyclerViewItemDecoration"/>
+        <activity android:name=".recycler_list_practicals.Activities.RecyclerViewActivity"/>
+        <activity android:name=".recycler_list_practicals.Activities.CustomListView" />
+        <activity android:name=".recycler_list_practicals.Activities.ListView" />
         <activity
-            android:name=".layout_practicals.FrameLayout"
-            android:exported="false" />
-
-        <activity
-            android:name=".layout_practicals.TableLayout"
-            android:exported="false" />
-
-        <activity
-            android:name=".layout_practicals.ConstraintLayout"
-            android:exported="false" />
-
-        <activity
-            android:name=".layout_practicals.RelativeLayout"
-            android:exported="false" />
-
-        <activity
-            android:name=".layout_practicals.LinearLayout"
-            android:exported="false" />
-
-        <activity
-            android:name=".layout_practicals.Layouts"
-            android:exported="true"/>
-
-        <activity
-            android:name=".recycler_list_practicals.Activities.RecyclerViewItemDecoration"
-            android:exported="false" />
-        <activity
-            android:name=".recycler_list_practicals.Activities.RecyclerViewActivity"
-            android:exported="true" />
-        <activity
-            android:name=".recycler_list_practicals.Activities.CustomListView"
-            android:exported="false" />
-        <activity
-            android:name=".recycler_list_practicals.Activities.ListView"
-            android:exported="true" />
+            android:name=".ui_widget.RegistrationForm"
+            android:theme="@style/Theme.Practicals.NoActionBar" />
     </application>
 
 </manifest>
