--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.practicals">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -28,6 +37,19 @@
         <activity
             android:name=".recycler_list_practicals.Activities.ListRecyclerViewPager"
             android:exported="true"/>
+        <activity
+            android:name=".activity_intent_fragment_practicals.Activities.AndroidDTasks"
+            android:exported="false" />
+        <activity
+            android:name=".activity_intent_fragment_practicals.Activities.FragmentContainerActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".activity_intent_fragment_practicals.Activities.JetpackNavActivity"
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true" >
