--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,33 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.practicals">
-
+    package="com.example.practicals" >
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Practicals">
+        android:theme="@style/Theme.Practicals" >
+        <activity
+            android:name=".views.ViewTasksActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.ScrollView"
+            android:exported="true" >
 
+        </activity>
+        <activity
+            android:name=".views.WebView"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".views.NestedScrollView"
+            android:exported="true" >
+
+        </activity>
         <activity
             android:name=".ui_widget.Toast"
             android:exported="true" />
-
         <activity
             android:name=".ui_widget.RegistrationForm"
             android:exported="true"
             android:theme="@style/Theme.Practicals.NoActionBar" />
-
-        <activity
-            android:name=".recycler_list_practicals.Activities.BottomNavigation"
-            android:exported="false" />
-        <activity
-            android:name=".recycler_list_practicals.Activities.ViewPagerActivity"
-            android:exported="false" />
-        <activity
-            android:name=".recycler_list_practicals.Activities.ListRecyclerViewPager"
-            android:exported="true"/>
         <activity
             android:name=".MainActivity"
             android:exported="true" >
@@ -37,42 +42,46 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".layout_practicals.FrameLayout"
             android:exported="false" />
-
         <activity
             android:name=".layout_practicals.TableLayout"
             android:exported="false" />
-
         <activity
             android:name=".layout_practicals.ConstraintLayout"
             android:exported="false" />
-
         <activity
             android:name=".layout_practicals.RelativeLayout"
             android:exported="false" />
-
         <activity
             android:name=".layout_practicals.LinearLayout"
             android:exported="false" />
-
         <activity
             android:name=".layout_practicals.Layouts"
-            android:exported="true"/>
-
+            android:exported="true" />
         <activity
             android:name=".recycler_list_practicals.Activities.RecyclerViewItemDecoration"
             android:exported="false" />
         <activity
             android:name=".recycler_list_practicals.Activities.RecyclerViewActivity"
-            android:exported="true" />
+            android:exported="true" >
+
+        </activity>
         <activity
             android:name=".recycler_list_practicals.Activities.CustomListView"
             android:exported="false" />
         <activity
             android:name=".recycler_list_practicals.Activities.ListView"
+            android:exported="true" />
+        <activity
+            android:name=".recycler_list_practicals.Activities.BottomNavigation"
+            android:exported="false" />
+        <activity
+            android:name=".recycler_list_practicals.Activities.ViewPagerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".recycler_list_practicals.Activities.ListRecyclerViewPager"
             android:exported="true" />
     </application>
 
