--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.practicals">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
@@ -16,16 +18,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Practicals" >
-
+        
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".web_services.CreateUserActivity"/>
+        <activity android:name=".web_services.DisplayUserActivity"/>
+        <activity android:name=".web_services.DelayedResponseActivity"/>
+        <activity android:name=".web_services.LoginActivity"/>
         <activity android:name=".views.ViewTasksActivity"/>
         <activity android:name=".views.ScrollView"/>
         <activity android:name=".views.WebView"/>
