Android architecture exercise completed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Practicals" >
-        
+        <activity
+            android:name=".architecture.ArchitectureTasksActivity"
+            android:exported="false" />
+        <activity
+            android:name=".architecture.mvvm.view.EditProfileActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".architecture.mvc.view.StudentDetailsActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".architecture.mvp.view.LoginMvpActivity"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -56,6 +68,7 @@
         <activity
             android:name=".ui_widget.RegistrationForm"
             android:theme="@style/Theme.Practicals.NoActionBar" />
+
     </application>
 
 </manifest>
