--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,17 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
     id 'androidx.navigation.safeargs'
 }
 
 android {
     compileSdk 32
 
+    buildFeatures {
+        viewBinding true
+        dataBinding true
+    }
     defaultConfig {
         applicationId "com.example.practicals"
         minSdk 21
@@ -47,6 +52,9 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.intuit.ssp:ssp-android:1.0.6'
+    implementation "androidx.fragment:fragment-ktx:1.4.1"
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version_ktx"
