--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.practicals">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <uses-feature
-        android:name="android.hardware.camera"
-        android:required="true" />
-
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,19 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Practicals" >
-        <activity
-            android:name=".architecture.ArchitectureTasksActivity"
-            android:exported="false" />
-        <activity
-            android:name=".architecture.mvvm.view.EditProfileActivity"
-            android:exported="true">
-        </activity>
-        <activity
-            android:name=".architecture.mvc.view.StudentDetailsActivity"
-            android:exported="true"/>
-        <activity
-            android:name=".architecture.mvp.view.LoginMvpActivity"
-            android:exported="true" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -40,6 +23,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".android_permission_model.PermissionActivity"/>
+        <activity
+            android:name=".ui_widget.RegistrationForm"
+            android:theme="@style/Theme.Practicals.NoActionBar" />
+        <activity android:name=".architecture.ArchitectureTasksActivity" />
+        <activity android:name=".architecture.mvvm.view.EditProfileActivity"/>
+        <activity android:name=".architecture.mvc.view.StudentDetailsActivity"/>
+        <activity android:name=".architecture.mvp.view.LoginMvpActivity" />
         <activity android:name=".web_services.CreateUserActivity"/>
         <activity android:name=".web_services.DisplayUserActivity"/>
         <activity android:name=".web_services.DelayedResponseActivity"/>
@@ -65,10 +56,6 @@
         <activity android:name=".recycler_list_practicals.Activities.RecyclerViewActivity"/>
         <activity android:name=".recycler_list_practicals.Activities.CustomListView" />
         <activity android:name=".recycler_list_practicals.Activities.ListView" />
-        <activity
-            android:name=".ui_widget.RegistrationForm"
-            android:theme="@style/Theme.Practicals.NoActionBar" />
-
     </application>
 
 </manifest>
